flex gap fix

--- a/src/index.css
+++ b/src/index.css
@@ -72,7 +72,7 @@ body {
   display: flex;
   text-align: center;
   justify-content: center;
-  gap: 1rem;
+
   align-items: center;
   margin-bottom: 2rem;
 }
@@ -211,6 +211,7 @@ p {
 
 .pages-desc {
   color: var(--text-color);
+  margin: 0 1rem;
 }
 
 /* below 1300px */
@@ -248,6 +249,6 @@ p {
 
 @media (max-width: 43em) {
   .container {
-    max-width: 27rem;
+    max-width: 29rem;
   }
 }
